tweeked styling on gmae cards on profile page, hopefully sort issue with overlapping links

--- a/static/css/games.css
+++ b/static/css/games.css
@@ -82,6 +82,7 @@ div.material-tooltip {
 
 .card-action-area.profile-size{
     height: 75px;
+    padding: 20px
 }
 
 .profile-links{
